
The modulus operator (%) may be used in math expressions. This is
implemented by std::fmod.

Added infix relational operators :lt, :le, :gt, :ge, :eq and :ne.
These all use the new comparison function %cmp, which in turn uses
the primitive comparison function &cmp.

Added a builtin printf, compiled when libffi is available. This
is implemented by the primitive &printf.

Corrected the behaviors of pushd and popd. Added dirs to display
directory stack.

Added a rudimentary jobs command.

Added a history command.

On platforms that provide a sigsetjmp() library call, the first
SIGINT caused all subsequent SIGINTs to be blocked. This broke the
ability to cancel an unfinished command line using ^C. Worse, all
forked programs inherited the SIGINT block. This is now fixed.

When built with readline, xs would exit on SIGQUIT (^\) because the
signal caused xs to behave as-if readline() had received an EOF.
This is now fixed.

Readline now has tab-complete for functions, variables, binaries in path
and (when written with a ./ prefix) files in the working directory.

xs now has its own SIGWINCH handler since readline, as of version
6.3, no longer handles the signal. For background, please read:
https://bugs.python.org/issue23735 

The init-file is now .xsrc (since es and xs are not compatible).

[implementation] The Ref() macros have been replaced with the Ref RAII-style class, which is much cleaner
and removed the need for RefEnd()s. varbegin()/varend() are wrapped around by
a similar class. (This is the most significant reason for using c++.)

Many old compatibility cludges (like reiser cpp support) have been dropped.

The old Es changelog follows:

CHANGES		-*- mode: indented-text -*- ($Revision: 1.4 $)
=======

0.9-alpha2 to 0.9beta
---------------------

Prototypes are only provided if they are not in the standard header
files.  

Es no longer provides its own strerror.  If there is a strerror, it is
used.  If not, we try a hack with sys_errlist.  Hopefully one of these