@@ -1,3 +1,4 @@
+- PRIM(printf) must walk format string.
 - FIX: Why does build fail w/o libffi?
 - Add job control (SIGTSTP, fg, bg, disown).
 - Add tests.
